# rocm_smi_installer

./: Cargo.toml  README.md
src/: auto_installer.rs  installers.rs  main.rs
